docs/partials/embedded-cluster/v3/_port-reqs.mdx
This section lists the ports used by Embedded Cluster. These ports must be open and available for both single- and multi-node installations.

#### Ports used by local processes

The following ports must be open and available for use by local processes running on the same node. It is not necessary to create firewall openings for these ports.

* 2379/TCP
* 7443/TCP
* 9099/TCP
* 10248/TCP
* 10257/TCP
* 10259/TCP

#### Ports required for bidirectional communication between nodes

The following ports are used for bidirectional communication between nodes.

For multi-node installations, create firewall openings between nodes for these ports.

For single-node installations, ensure that there are no other processes using these ports. Although there is no communication between nodes in single-node installations, these ports are still required.

* 2380/TCP
* 4789/UDP
* 6443/TCP
* 9091/TCP
* 9443/TCP
* 10249/TCP
* 10250/TCP
* 10256/TCP

#### Embedded Cluster UI port

Create a firewall opening for port 30080/TCP.
The Embedded Cluster UI requires that port 30080/TCP is open and available.

Additionally, port 30080 must be accessible by nodes joining the cluster.

If port 30080 is occupied, you can select a different port for the Admin Console during installation. For more information, see [install](/embedded-cluster/v3/embedded-cluster-install).

#### Embedded Cluster API port

The Embedded Cluster daemon serves an HTTP API on port 30081/TCP on every controller node. Nodes use it to join the cluster and to receive streamed upgrades from the primary controller, and external automation uses it for headless installs and programmatic node joins.

For multi-node installations, create firewall openings between nodes for port 30081/TCP. Single-node installations do not need a firewall opening for this port unless you drive the API from outside the host.

If port 30081 is occupied, you can select a different port for the API during installation. For more information, see [install](/embedded-cluster/v3/embedded-cluster-install) and [External API](/embedded-cluster/v3/embedded-cluster-external-api).

#### LAM port

The Local Artifact Mirror (LAM) requires that port 50000/TCP is open and available.

If port 50000 is occupied, you can select a different port for the LAM during installation. For more information, see [install](/embedded-cluster/v3/embedded-cluster-install).
